@@ -106,6 +106,8 @@ BUGFIXES:
 
   ZOOKEEPER-2179: Typo in Watcher.java (Archana T via rgs)
 
+  ZOOKEEPER-2178 Native client fails compilation on Windows. (Chris Nauroth via michim)
+
 IMPROVEMENTS:
   ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)  
 
